syntax = "proto3";

package mickey;

/*
 * ClusterManagement Service
 */
service ClusterManagement {
    rpc NodeList (NodeListRequest) returns (NodeListReply);
    rpc NodeShow (NodeShowRequest) returns (NodeShowReply);
}

message Node {
    uint32 id = 1;
    string rpcAddr = 2;
    string xferAddr = 3;
}

// Node Messages
message NodeListRequest {
}

message NodeListReply {
    repeated Node nodes = 1;
}

message NodeShowRequest {
    uint32 id = 1;
}

message NodeShowReply {
    Node node = 1;
}

/*
 * DataManagement Service
 */
service DataManagement {
    rpc LoadDirectory (LoadDirectoryRequest) returns (LoadDirectoryReply);
    rpc TaskList (TaskListRequest) returns (TaskListReply);
    rpc TaskShow (TaskShowRequest) returns (TaskShowReply);
}

// Load Messages
message LoadDirectoryRequest {
    string directory = 1;
    string satellite = 2;
    repeated string channels = 3;
}

message LoadDirectoryReply {
    uint32 id = 1;
}

// Task Messages
message TaskShowRequest {
    uint32 id = 1;
}

message TaskShowReply {
    float completion_percentage = 1;
}

message TaskListRequest {
}

message TaskListReply {
}
